新增:链接管理
