# app/model/articles/articles.go
@@ -1,31 +1,0 @@
-// ============================================================================
-// This is auto-generated by gf cli tool only once. Fill this file as you wish.
-// ============================================================================
-
-package articles
-
-const PageSize = 10
-
-// 列表请求实体
-type ApiArticlesListReq struct {
-	CategoryId int    `p:"category_id"`
-	PageNum    int    `p:"page"`
-	PageSize   int    `p:"page_size"`
-	Keywords   string `p:"keywords"`
-	Status     int    `p:"status"`
-}
-
-// 添加文章请求实体
-type ApiAddReq struct {
-	Title      string `p:"title" v:"required#请填写文章标题"`
-	Summary    string `p:"summary"`
-	Cover      string `p:"cover" v:"required#请上传文章封面"`
-	CategoryId int    `p:"category_id" v:"required|min:1#请选择栏目|请选择栏目"`
-	Tags       string `p:"tags" v:"required#请选择标签"`
-	From       int    `p:"from" v:"required#请选择文章来源"`
-	Status     int    `p:"status" v:"required#请设置文章状态"`
-	Content    string `p:"content" v:"required#请填写文章内容"`
-	MdContent  string `p:"md_content" v:"required#Markdown内容错误"`
-}
-
-
