# app/model/categories.go
@@ -1,0 +1,25 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. Fill this file as you wish.
+// ==========================================================================
+
+package model
+
+import (
+	"go-gf-blog/app/model/internal"
+)
+
+// Categories is the golang structure for table categories.
+type Categories internal.Categories
+
+// 列表查询请求实体
+type ApiQueryCategoriesReq struct {
+	Id int `p:"id"`
+	Status int `p:"status"`
+}
+
+// 增加分类请求实体
+type ApiAddCategoryReq struct {
+	Name   string `p:"name" v:"required#请输入正确的分类名称"`
+	Sort   int    `p:"sort" v:"required|integer#请填写设置排序|排序必须是整数"`
+	Status int    `p:"status" v:"required|in:0,1#请选择状态|状态必须在0和1之间"`
+}
