# app/model/internal/user.go
@@ -1,0 +1,19 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. You may not really want to edit it.
+// ==========================================================================
+
+package internal
+
+import (
+	"github.com/gogf/gf/os/gtime"
+)
+
+// User is the golang structure for table user.
+type User struct {
+    Id        uint        `orm:"id,primary" json:"id"         c:"-"`         // 用户ID
+    Passport  string      `orm:"passport"   json:"passport"   c:"passport"`   // 用户账号
+    Password  string      `orm:"password"   json:"password"   c:"password"`   // 用户密码
+    Nickname  string      `orm:"nickname"   json:"nickname"   c:"nickname"`   // 用户昵称
+    CreatedAt *gtime.Time `orm:"created_at" json:"created_at" c:"created_at"` // 创建时间
+    UpdatedAt *gtime.Time `orm:"updated_at" json:"updated_at" c:"updated_at"` // 更新时间
+}
